Fixing Kanban card edges from cropping out Mark Highlight borders

--- a/src/scss/Plugins/Community/kanban.scss
+++ b/src/scss/Plugins/Community/kanban.scss
@@ -55,6 +55,10 @@ div.kanban-plugin__ {
 				color: var(--text-normal);
 			}
 		}
+
+		&-title {
+			overflow: visible;
+		}
 	}
 
 	&drag-container > .kanban-plugin__lane-wrapper > .kanban-plugin__lane {
